[gd_scene load_steps=11 format=3 uid="uid://dtjpxll837wg"]

[ext_resource type="Texture2D" uid="uid://rnxkegj4u03d" path="res://art/traps/spike-trap.png" id="1_7exbe"]
[ext_resource type="Script" path="res://components/trap/trap.gd" id="2_d58yo"]
[ext_resource type="Script" path="res://components/trap/damage_area.gd" id="3_2yj6a"]
[ext_resource type="Texture2D" uid="uid://cf6g4v88nhpyq" path="res://art/traps/timer-under.png" id="4_m2epp"]
[ext_resource type="Texture2D" uid="uid://c0k746ay2j1sr" path="res://art/traps/timer-over.png" id="5_2ixjn"]
[ext_resource type="Texture2D" uid="uid://dhsbk6xeaxx6o" path="res://art/traps/timer-progress.png" id="6_jcs38"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fausp"]
atlas = ExtResource("1_7exbe")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxlkw"]
atlas = ExtResource("1_7exbe")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_y77fx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fausp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxlkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxlkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxlkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxlkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fausp")
}],
"loop": false,
"name": &"activate",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_h5i5q"]
radius = 8.0

[node name="Trap" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_y77fx")
animation = &"activate"
frame = 5
frame_progress = 1.0
script = ExtResource("2_d58yo")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DamageArea" type="Area2D" parent="."]
collision_mask = 2
input_pickable = false
script = ExtResource("3_2yj6a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_h5i5q")

[node name="ResetClock" type="TextureProgressBar" parent="."]
offset_left = 4.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 3.0
scale = Vector2(0.5, 0.5)
step = 0.0
value = 100.0
fill_mode = 5
texture_under = ExtResource("4_m2epp")
texture_over = ExtResource("5_2ixjn")
texture_progress = ExtResource("6_jcs38")

[connection signal="timeout" from="Timer" to="." method="reset_trap"]
[connection signal="area_entered" from="DamageArea" to="DamageArea" method="_on_area_entered"]
[connection signal="trap_triggered" from="DamageArea" to="." method="trigger_trap"]
